# Sentinel

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  progress.md  pyproject.toml
.cursor/rules/: aws-agent-rules.mdc
infra/: apply_schema.py  aws_setup.md  ccloud_setup.md  schema.sql  seed_runbooks.py
lambdas/executor/: handler.py
lambdas/ingest/: handler.py
scripts/: demo_incident.py  resilience_demo.sh
src/sentinel/: agent.py  config.py  db.py  embeddings.py  llm.py  memory.py  postmortem.py  server.py
src/sentinel/tools/: __init__.py  ccloud.py  mcp_read.py  remediate.py  skills.py
tests/: test_agent_loop.py  test_ccloud.py  test_db_retry.py  test_embeddings.py  test_ingest.py  test_mcp_read.py  test_memory.py  test_postmortem.py  test_recall.py  test_remediate.py  test_seed_entries.py  test_server.py  test_skills.py  test_state_machine.py
