[project]
name = "sentinel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]",
    "pydantic-settings",
    "boto3",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
